--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,11 +1,11 @@
 <h1>作成ページ</h1>
 
 <%= form_for(@task) do |f| %>
-<% if task.errors.any? %>
+<% if @task.errors.any? %>
     <div id="error_explanation">
       <ul>
-        <% task.errors.full_tasks.each do |task| %>
-          <li><%= task %></li>
+        <% @task.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
         <% end %>
       </ul>
     </div>
