--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,10 +1,10 @@
 <h1>id: <%= @task.id %> のタスク編集ページ</h1>
 
 <%= form_for(@task) do |f| %>
-<% if task.errors.any? %>
+  <% if @task.errors.any? %>
     <div id="error_explanation">
       <ul>
-        <% task.errors.full_messages.each do |message| %>
+        <% @task.errors.full_messages.each do |message| %>
           <li><%= task %></li>
         <% end %>
       </ul>
