--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,7 +1,5 @@
 <div class="row">
-  <div class="col-xs-12">
-  <div class="col-sm-offset-2 col-sm-8">
-  <div class="col-lg-offset-3 col-lg-6"></div>
+  <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-lg-offset-3 col-lg-6">
     
 <%= form_for(task) do |f| %>
 <% if task.errors.any? %>
@@ -22,6 +20,9 @@
   <div class="form-group">
   <%= f.label :content, 'タスク' %>
   <%= f.text_field :content, class: 'form-control' %>
+  </div>
 
   <%= f.submit '投稿', class: 'btn btn-primary' %>
-<% end %>
+  <% end %>
+  </div>
+</div>
